fixed margin-right on mobile device and scrolling performance improved

--- a/style.css
+++ b/style.css
@@ -468,11 +468,6 @@ input[type='search']::-webkit-search-cancel-button {
   visibility: hidden;
 }
 
-.navigate-to-top:hover {
-  background-color: var(--color-white-2);
-  border-radius: 8px;
-}
-
 .navigate-to-top:focus {
   outline: none;
 }
@@ -483,6 +478,9 @@ input[type='search']::-webkit-search-cancel-button {
 
 /* RESPONSIVE FOR TABLET DEVICES STYLES  */
 @media only screen and (max-width: 992px) {
+  .navbar {
+    top: 65%;
+  }
   .phones-container {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -508,8 +506,8 @@ input[type='search']::-webkit-search-cancel-button {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding: 1rem 0;
+    margin-right: 0;
   }
 
   .features .title::after {
